--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
   flutter_bloc: ^7.0.0
   dio: ^4.0.0
   conditional_builder: ^1.0.2
-
+  url_launcher: ^6.0.3
+  hexcolor: ^2.0.3
+  shared_preferences: ^2.0.5
+  webview_flutter: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
